[project]
name = "bluetrak"
version = "0.1.0"
description = "USD/ARS exchange rate tracker from multiple sources"
readme = "README.md"
authors = [
    { name = "Roberto Hernández Ch.", email = "robertohernandezch@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28",
    "apscheduler>=3.10,<4",
    "beautifulsoup4>=4.12",
    "lxml>=5",
    "pydantic>=2",
    "pydantic-settings>=2",
    "numpy>=2",
]

[project.optional-dependencies]
alerts = [
    "python-telegram-bot>=21",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "mypy>=1.14",
    "respx>=0.22",
]

[project.scripts]
bluetrak = "bluetrak.__main__:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
